# CrewAI-RAG-using-Qdrant

./: Environment File.txt  README.md  pre_process_docs.py  pyproject.toml  requirements.txt
src/torch_rag/: app.py  crew.py  main.py
src/torch_rag/config/: agents.yaml  tasks.yaml
src/torch_rag/tools/: qdrant_search.py
