[project]
name = "torch_rag"
version = "0.1.0"
description = "torch_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
torch_rag = "torch_rag.main:run"
run_crew = "torch_rag.main:run"
train = "torch_rag.main:train"
replay = "torch_rag.main:replay"
test = "torch_rag.main:test"
run_with_trigger = "torch_rag.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
